unpackaged/main/default/objects/Livevox_API_Settings__mdt/Livevox_API_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Credentials for the integration user in Livevox that will be connecting and sending request through the API.</description>
    <label>Livevox API Setting</label>
    <pluralLabel>Livevox API Settings</pluralLabel>
</CustomObject>