unpackaged/main/default/objects/Livevox_API_Settings__mdt/fields/clientName__c.field-meta.xml
<CustomField>
    <fullName>clientName__c</fullName>
    <label>clientName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>