unpackaged/main/default/objects/Livevox_API_Settings__mdt/fields/userName__c.field-meta.xml
<CustomField>
    <fullName>userName__c</fullName>
    <label>userName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>